--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a:visited {
 .product-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   margin: auto;
   border-radius: 12px 12px 0 0;
 }
@@ -105,6 +105,9 @@ a:visited {
   border-radius: 12px;
   margin: auto;
 }
+.add-to-cart:hover {
+  background-color: hsl(158, 36%, 52%);
+}
 .footer {
   margin-top: 2rem;
 }
@@ -117,7 +120,11 @@ a:visited {
 }
 @media only screen and (min-width: 980px) {
   .product-card {
-    width: 800px;
+    width: 700px;
     flex-flow: row;
+  }
+  .product-img {
+    border-radius: 12px 0 0 12px;
+    object-fit: cover;
   }
 }
