--- a/css/style.less
+++ b/css/style.less
@@ -52,7 +52,7 @@ a {
 .product-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   margin: auto;
   border-radius: 12px 12px 0 0;
 }
@@ -111,6 +111,10 @@ a {
   margin: auto;
 }
 
+.add-to-cart:hover {
+  background-color: lighten(@darkcyan, 15%);
+}
+
 .footer {
   margin-top: 2rem;
 }
@@ -126,7 +130,12 @@ a {
 
 @media only screen and (min-width: 980px) {
   .product-card {
-    width: 800px;
+    width: 700px;
     flex-flow: row;
+  }
+
+  .product-img {
+    border-radius: 12px 0 0 12px;
+    object-fit: cover;
   }
 }
